# baseltest

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: GETTING-STARTED.md  USER-GUIDE.md
examples/: .gitignore  README.md
examples/language-model/: basket-builder.yaml  contract.yaml  mavai-bindings.py  mavai-services.yaml  measure.yaml  task.yaml
examples/rule-driven-service/: mavai-bindings.py  mavai-services.yaml  request-triage.yaml  triage-rules.txt
examples/simulated-service/: contract.yaml  fortune-teller.yaml  mavai-bindings.py  measure.yaml  task.yaml
examples/speech-to-text/: README.md  mavai-bindings.py  transcription.yaml
examples/speech-to-text/audio/: clip-01.m4a  clip-02.m4a  clip-03.m4a
examples/vision/: README.md  dominant-colour.yaml  mavai-services.yaml
src/baseltest/: __init__.py  _version.py
src/baseltest/baseline/: __init__.py  reader.py  record.py  writer.py
src/baseltest/contract/: __init__.py  errors.py  evaluation.py  model.py  postconditions.py
src/baseltest/declarative/: __init__.py  _cli.py  _disclosure.py  _errors.py  _instantiate.py  _materialise.py  _optimize.py  _parser.py  _registrations.py  _registry.py  _runner.py  _schema_walk.py  _services.py  _signatures.py  _sizing.py  _steppers.py  _structured.py  _types.py
src/baseltest/declarative/_instantiate/: __init__.py  _baseline.py  _compose.py  _explore.py  _latency.py  _optimize_point.py  _postconditions.py  _service.py  _sizing_policy.py  _views.py
src/baseltest/declarative/_parser/: __init__.py  _contract.py  _criteria.py  _forms.py  _inputs.py  _latency.py  _model.py  _shape.py  _structure.py
src/baseltest/declarative/_providers/: __init__.py  _anthropic.py  _apertus.py  _litellm.py  _media.py  _mistral.py  _ollama.py  _openai.py  _protocol.py
src/baseltest/declarative/_registry/: __init__.py  _bindings.py  _core.py  _guards.py  _service_types.py  _transform.py
src/baseltest/declarative/_runner/: __init__.py  _check.py  _explore.py  _load.py  _optimize.py  _optimize_loop.py  _report.py  _run.py  _shared.py
src/baseltest/declarative/_services/: __init__.py  _language_model.py  _model.py  _parse.py
src/baseltest/declarative/_sizing/: __init__.py  _criteria.py  _flags.py  _model.py  _modes.py  _pricing.py  _prompts.py  _rates.py  _render.py  _resolve.py
src/baseltest/declarative/_steppers/: __init__.py  _builtins.py  _context.py  _contract.py  _linear_sweep.py  _numeric.py  _prompt_engineer.py  _refining_grid.py
src/baseltest/engine/: __init__.py  artefact.py  defect.py  latency.py  naming.py  run.py
src/baseltest/engine/run/: __init__.py  attainment.py  execute.py  feasibility.py  identity.py  judge.py  model.py  sample.py  standing.py
src/baseltest/exploration/: __init__.py  record.py  writer.py
src/baseltest/observation/: __init__.py  emit.py  record.py
src/baseltest/optimization/: __init__.py  record.py  writer.py
src/baseltest/reporting/: __init__.py  console.py  explore_report.py  html.py  report_html.py  run_design.py  test_report.py  verdict_reader.py  verdict_xml.py
src/baseltest/statistics/: __init__.py  _constants.py  _validation.py  feasibility.py  latency.py  power.py  proportion.py  sizing.py  summary.py  threshold.py  verdict.py  wilson.py
tests/: conftest.py  test_closed_set_vocabulary.py  test_domain_constants.py  test_error_hierarchy.py  test_frozen_collections_readonly.py  test_public_api.py  test_requirement_code_isolation.py  test_version.py
tests/baseline/: test_reader.py  test_writer.py
tests/contract/: test_evaluation.py  test_latency_model.py  test_service_protocol.py
tests/declarative/: test_capabilities.py  test_check_verb.py  test_cli.py  test_covariates.py  test_defect_isolation.py  test_explore.py  test_file_inputs.py  test_inputs.py  test_int_string_guard.py  test_latency.py  test_max_tokens.py  test_multimodal.py  test_optimize.py  test_provider_failures.py  test_providers.py  test_reader.py  test_registrations.py  test_registry_isolation.py  test_report_verb.py  test_schema_walk.py  test_services.py  test_sizing.py  test_user_types.py
tests/engine/: test_artefact.py  test_latency.py  test_run.py  test_service_failure.py  test_status_vocabulary.py
tests/exploration/: test_interchange_conformance.py  test_writer.py
tests/optimization/: test_interchange_conformance.py  test_writer.py
tests/reporting/: test_console.py  test_html.py  test_reports.py  test_verdict_xml.py
tests/statistics/: conformance.py  test_conformance.py  test_feasibility.py  test_isolation.py  test_power.py  test_proportion.py  test_sizing.py  test_summary.py  test_threshold.py  test_verdict.py  test_wilson.py
tests/statistics/fixtures/: NOTE.md  SCOPE.json
