[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseltest"
version = "0.1.0.dev0"
description = "Python-native framework for probabilistic testing of stochastic services"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Mike Mannion" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://mavai.org"
Repository = "https://github.com/mavai-org/baseltest"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/baseltest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=baseltest --cov-report=term-missing"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["baseltest"]
mypy_path = "src"

# Neither statsmodels nor scipy ship inline types for the modules used here
# (scipy's own `scipy-stubs` package requires Python 3.12+ stub syntax that
# this project's mypy target predates), so both are exempted from the
# missing-imports check rather than pinned to an incompatible stub package.
[[tool.mypy.overrides]]
module = ["statsmodels.*", "scipy.*"]
ignore_missing_imports = true
