[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseltest"
version = "0.4.0"
description = "Python-native framework for probabilistic testing of stochastic services"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Mike Mannion" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://mavai.org"
Repository = "https://github.com/mavai-org/baseltest"

[project.optional-dependencies]
declarative = [
    "ruamel.yaml>=0.18",
    "jsonpath-rfc9535>=0.1",
    "elementpath>=4.4",
    "jsonschema>=4.21",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-jsonschema>=4.21",
    "import-linter>=2.0",
    "baseltest[declarative]",
]

[project.scripts]
basel = "baseltest.declarative._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/baseltest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=baseltest --cov-report=term-missing"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["baseltest"]
mypy_path = "src"

# Neither statsmodels nor scipy ship inline types for the modules used here
# (scipy's own `scipy-stubs` package requires Python 3.12+ stub syntax that
# this project's mypy target predates), so both are exempted from the
# missing-imports check rather than pinned to an incompatible stub package.
[[tool.mypy.overrides]]
module = ["statsmodels.*", "scipy.*", "ruamel.*", "jsonpath_rfc9535.*", "elementpath.*"]
ignore_missing_imports = true

[tool.importlinter]
root_package = "baseltest"

[[tool.importlinter.contracts]]
name = "Layering: declarative on top, statistics at the bottom"
type = "layers"
layers = [
    "baseltest.declarative",
    "baseltest.baseline | baseltest.exploration | baseltest.reporting",
    "baseltest.engine",
    "baseltest.contract",
    "baseltest.statistics",
]

[[tool.importlinter.contracts]]
name = "The statistics package imports nothing internal"
type = "forbidden"
source_modules = ["baseltest.statistics"]
forbidden_modules = [
    "baseltest.contract",
    "baseltest.engine",
    "baseltest.baseline",
    "baseltest.exploration",
    "baseltest.reporting",
    "baseltest.declarative",
]

[[tool.importlinter.contracts]]
name = "Renderers format; they do not compute"
type = "forbidden"
source_modules = ["baseltest.reporting"]
forbidden_modules = ["baseltest.statistics"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Nothing imports the declarative front-end"
type = "forbidden"
source_modules = [
    "baseltest.statistics",
    "baseltest.contract",
    "baseltest.engine",
    "baseltest.baseline",
    "baseltest.exploration",
    "baseltest.reporting",
]
forbidden_modules = ["baseltest.declarative"]
